@@ -8,58 +8,57 @@ package DmojBackEnd;
  *
  * @author zjiaq
  */
+import Objects.TestCase;
 import java.io.*;
+import java.util.*;
+
 
 class CodeEvaluator {
-    public static String evaluate(String studentCode, String input, String expectedOutput) throws IOException, InterruptedException {
-        // Write the student code to a file
-        String filePath = "StudentCode.java";
-        BufferedWriter writer = new BufferedWriter(new FileWriter(filePath));
-        writer.write(studentCode);
-        writer.close();
 
-        // Compile the student code
-        Process compileProcess = Runtime.getRuntime().exec("javac " + filePath);
+    public static int evaluate(String studentCode, List<TestCase> testCases) throws IOException, InterruptedException {
+        // Compile the student's code
+//        Process compileProcess = new ProcessBuilder("javac", "studentAnswr.txt").start();
+        Process compileProcess = Runtime.getRuntime().exec("javac " + studentCode);
         compileProcess.waitFor();
-
-        // Check if compilation was successful
-        if (compileProcess.exitValue() != 0) {
-            return "Compilation Error";
+        if (compileProcess.waitFor() != 0) {
+            System.out.println("Compilation Error. Please check the student's code.");
+            return -1;
         }
 
-        // Run the compiled code
-        Process runProcess = Runtime.getRuntime().exec("java StudentCode");
+//        // Extract the class name from the file path
+//        String className = new File("studentAnswr.txt").getName().replace(".java", "");
 
-        // Write all lines of input to the program
-        BufferedWriter processInput = new BufferedWriter(new OutputStreamWriter(runProcess.getOutputStream()));
-        for (String inputLine : input.split("\n")) {
-            processInput.write(inputLine);
-            processInput.newLine();
-        }
-        processInput.close();
-        
-        boolean finished = runProcess.waitFor(30, java.util.concurrent.TimeUnit.SECONDS);
-        if (!finished) {
-            runProcess.destroy();
-            return "Execution Timed Out";
+
+        // Execute the student's program and test each case
+        int passed = 0;
+        for (TestCase testCase : testCases) {
+            String[] inputs = testCase.getInput().split(",");
+            String expectedOutput = testCase.getOutput();
+
+            // Run the student's compiled code
+            Process runProcess = Runtime.getRuntime().exec("java StudentCode");
+                    
+            BufferedWriter processInput = new BufferedWriter(new OutputStreamWriter(runProcess.getOutputStream()));
+            for (String input : inputs) {
+                processInput.write(input.trim());
+                processInput.newLine();
+            }
+            processInput.close();
+
+            // Capture the output
+            BufferedReader processOutput = new BufferedReader(new InputStreamReader(runProcess.getInputStream()));
+            StringBuilder actualOutput = new StringBuilder();
+            String line;
+            while ((line = processOutput.readLine()) != null) {
+                actualOutput.append(line.trim());
+            }
+
+            // Compare actual output with expected output
+            if (actualOutput.toString().equals(expectedOutput)) {
+                passed++;
+            }
         }
 
-        // Capture the output from the program
-        BufferedReader processOutput = new BufferedReader(new InputStreamReader(runProcess.getInputStream()));
-        StringBuilder resultBuilder = new StringBuilder();
-        String line;
-        while ((line = processOutput.readLine()) != null) {
-            resultBuilder.append(line).append("\n");
-        }
-        processOutput.close();
-
-        String result = resultBuilder.toString().trim();
-
-        // Compare the output with the expected output
-        if (result.equals(expectedOutput.trim())) {
-            return "Test Passed";
-        } else {
-            return "Test Failed: Expected '" + expectedOutput.trim() + "' but got '" + result + "'";
-        }
+        return passed;
     }
 }
